Fix navbar height on small size screen

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,3 +15,6 @@
 .navbar-foodsy{
   padding: 0px;
 }
+.navbar-menu{
+  float: right;
+}
